--- a/core/templates/create_post.html
+++ b/core/templates/create_post.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block content %}
-  <form enctype="multipart/form-data" method="POST" class="w-full mx-auto bg-white p-8 ">
+  <form enctype="multipart/form-data" method="POST" class="w-full mx-auto bg-white p-8 rounded-3xl">
     {% csrf_token %}
 
     <div class="mb-4">
       <input  required type="text" placeholder="Title" name="title" id="title" class="w-full px-3 py-2 border rounded-3xl focus:outline-none focus:border-blue-500 bg-slate-200 " />
     </div>
     <div class="mb-4">
-      <textarea  name="content" id="content" placeholder="Content" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500 bg-slate-200 "></textarea>
+      <textarea  name="content" id="content" rows="7" placeholder="Content" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500 bg-slate-200 "></textarea>
     </div>
     <label for="image" class="custom-file-upload">
         <i class="fa-solid fa-upload"></i> Upload Image
