profile page added and some minor fixes

--- a/core/templates/create_post.html
+++ b/core/templates/create_post.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <form enctype="multipart/form-data" method="POST" class="w-full mx-auto bg-white p-8 rounded-3xl">
+  <form enctype="multipart/form-data" method="POST" class="shadow-lg w-full mx-auto bg-white p-8 rounded-3xl">
     {% csrf_token %}
 
     <div class="mb-4">
