--- a/core/templates/create_post.html
+++ b/core/templates/create_post.html
@@ -1,13 +1,10 @@
 {% extends 'home.html' %}
 
-{% block title %}
-  new-post
-{% endblock %}
+{% block title %}New Post{% endblock %}
 
 {% block content %}
   <form enctype="multipart/form-data" method="POST" class="shadow-lg w-full mx-auto bg-white p-8 rounded-3xl">
     {% csrf_token %}
-
     <div class="mb-4">
       <input  required type="text" placeholder="Title" name="title" id="title" class="w-full px-3 py-2 border rounded-3xl focus:outline-none focus:border-blue-500 bg-slate-200 " />
     </div>
